Remove dto and replace it with list of dtos